adicionei varias coisas

--- a/aula.html
+++ b/aula.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Aprendiz, inicio, Primeira Pagina" />
+    <meta name="Description" content="Minha primeira pagina" />
+    <meta name="Author" content="Gabryell Leal Rocha" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Primeira Pagina Web</title>
 </head>
 <body>
-    <h1>Primeiro Titulo em azul</h1>
-    <!-- Esse seria um comentario do codigo -->
+    <h1>Criando uma página web</h1>
+    <!-- Esse seria um comentário do código -->
+    <p>Aqui vai uma foto minha</p>
+    <img src="foto-Gabryell.jpeg" style="height: 15rem;">
+    <p>Eu serei responsável por te ajudar a aprender HTML</p>
+    <img src="imagem-html.png" style="height: 20rem;">
+    <p>Assista ao vídeo abaixo e entenda de onde vem o HTML <u>(Hyper Text Markup Language)</u> e para que ele serve</p>
+    <h2><b>5 MINUTOS DE HTML PARA INICIAR EM PROGRAMAÇÃO!</b> por Rafaella Ballerini</h2>
+    
+    <div class="video-container">
+        <iframe src="https://www.youtube.com/embed/3oSIqIqzN3M?si=csV-ftEaWE1YbLna" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+    <a href="https://unifacisa.edu.br" target="_blank">UniFacisa</a>
 </body>
 </html>
